tests/paczka1/small_fuzzy/40090632.err
Error in line 1: hiVrJYqbfqV S842 96,7
Error in line 9: hiVrJYqbfqV A840 31,1
